consistent with videos

--- a/05_Advanced_RAG_Pre_Retrieval/05_02_Optimizing_Chunk_Size.ipynb
+++ b/05_Advanced_RAG_Pre_Retrieval/05_02_Optimizing_Chunk_Size.ipynb
@@ -27,7 +27,7 @@
     "\n",
     "nest_asyncio.apply()\n",
     "\n",
-    "load_dotenv(\"../.env\")\n",
+    "load_dotenv(\"\")\n",
     "\n",
     "sys.path.append('../helpers')\n",
     "\n",
@@ -40,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "OPENAI_API_KEY = os.environ['OPENAI_API_KEY'] or getpass(\"Enter your OPENAI_API_KEYß: \")"
+    "OPENAI_API_KEY = os.environ['OPENAI_API_KEY'] or getpass(\"Enter your OPENAI_API_KEY: \")"
    ]
   },
   {
@@ -70,19 +70,6 @@
     "from utils import get_documents_from_docstore\n",
     "\n",
     "senpai_documents = get_documents_from_docstore(\"../data/words-of-the-senpais\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from datasets import load_dataset\n",
-    "\n",
-    "eval_dataset = load_dataset(\"harpreetsahota/LI_Learning_RAG_Eval_Set\", split='train')\n",
-    "\n",
-    "eval_dataset = eval_dataset.filter(lambda x: x['question_groundedness_score'] is not None and x['question_groundedness_score'] >= 4)"
    ]
   },
   {
@@ -129,6 +116,8 @@
     "\n",
     "## 🤔 The Impact of Chunk Size\n",
     " \n",
+    "I recommend reading [this blog](https://www.llamaindex.ai/blog/evaluating-the-ideal-chunk-size-for-a-rag-system-using-llamaindex-6207e5d3fec5) post by the LlamaIndex team.\n",
+    "\n",
     " #### **📏 Relevance and Granularity**\n",
     "\n",
     "*   Smaller chunks (e.g., 128) offer granularity but risk missing vital information, or lack sufficient context.\n",
@@ -163,7 +152,7 @@
     "|--------|-------------|\n",
     "| 📄 **Data Characteristics** | The optimal chunk size depends on the data you're indexing. Long, detailed documents, may require a larger chunk size to capture more context. Smaller chunk size may be more appropriate for short, focused passages. |\n",
     "| 🔍 **Retrieval Requirements** | If you need to retrieve very specific details, a smaller chunk size may be better. If you're looking for more general information, a larger chunk size may suffice. |\n",
-    "| 🔢 **Similarity Parameters** | When using a larger chunk size with a `VectorStoreIndex`, you may also want to increase the `similarity_top_k` parameter. This parameter determines how many of the most similar chunks are retrieved for each query. With larger chunks, you may need to retrieve more chunks to cover the same amount of information. |\n",
+    "| 🔢 **Similarity Parameters** | With a smaller chunk size, the embeddings become more specific, and as a result, there might be more relevant chunks that match a given query. To accommodate this increase in potentially relevant chunks, it is advisable to increase the `similarity_top_k` parameter. This adjustment ensures that the query engine does not overlook relevant results due to a too narrow top-k selection. |\n",
     "\n",
     "### There are [various methods](https://docs.llamaindex.ai/en/stable/module_guides/loading/node_parsers/modules) you can use to chunk your documents. \n",
     "\n",
@@ -197,7 +186,7 @@
     "\n",
     " - 🧠`SemanticSplitterNodeParser`\n",
     "\n",
-    "# 🪙 `TokenTextSplitter`\n",
+    "# 🪙 [`TokenTextSplitter`](https://github.com/run-llama/llama_index/blob/main/llama-index-core/llama_index/core/node_parser/text/token.py)\n",
     "\n",
     "The primary function is to divide a given text into smaller chunks, ensuring each chunk stays within a specified token limit. \n",
     "\n",
@@ -215,9 +204,11 @@
     "\n",
     "*   **`chunk_overlap`**: Determines the number of overlapping tokens between consecutive chunks. Defaults to 20.\n",
     "\n",
-    "*   **`separator`**: Specifies the primary character used to split the text into words. Defaults to space (`\" \"`).\n",
+    "*   **`separator`**: Specifies the primary character used to split the text into words. Defaults to space (`\" \"`). \n",
     "\n",
     "*   **`backup_separators`**: Provides additional characters for splitting if the primary separator isn't sufficient. Defaults to new line character (`\"\\n\"`).\n",
+    "\n",
+    "Note: The order of splitting is: 1. split by separator, 2. split by backup separators (if any), 3. split by characters\n",
     "\n",
     "*   **`include_metadata`**: Enables or disables the inclusion of metadata within each chunk. Defaults to `True`.\n",
     "\n",
@@ -234,9 +225,7 @@
     "\n",
     "nodes = splitter.get_nodes_from_documents(documents)\n",
     "```\n",
-    "\n",
-    "\n",
-    "Let's evaluate the impact varying chunk size has on our `ragas` metrics. I'll limit our exploration to the `chunk_sizes = [128, 256, 512, 1024]` and hold `chunk_overlap` fixed to 16 tokens. "
+    "I'll limit our exploration to the `chunk_sizes = [64, 128, 256, 512]` and hold `chunk_overlap` fixed to 16 tokens. "
    ]
   },
   {
@@ -245,7 +234,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(senpai_documents[42].text)"
+    "senpai_documents[42].text"
    ]
   },
   {
@@ -255,7 +244,64 @@
    "outputs": [],
    "source": [
     "from llama_index.core.node_parser import TokenTextSplitter\n",
-    "TokenTextSplitter(chunk_size=64, chunk_overlap=16).split_text(senpai_documents[42].text)"
+    "\n",
+    "example_split = TokenTextSplitter(chunk_size=64, chunk_overlap=16).split_text(senpai_documents[42].text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "example_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(example_split[0].split(' '))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tiktoken\n",
+    "\n",
+    "encoding = tiktoken.get_encoding(\"cl100k_base\")\n",
+    "\n",
+    "def num_tokens_from_string(string: str,encoding=encoding) -> int:\n",
+    "    \"\"\"Returns the number of tokens in a text string.\"\"\"\n",
+    "    encoding = encoding\n",
+    "    num_tokens = len(encoding.encode(string))\n",
+    "    return num_tokens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokens = encoding.encode(example_split[0])\n",
+    "\n",
+    "for token in tokens:\n",
+    "    print(encoding.decode_single_token_bytes(token))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_tokens_from_string(example_split[0])"
    ]
   },
   {
@@ -283,7 +329,7 @@
    "source": [
     "token_splitter_results = {}\n",
     "\n",
-    "chunk_sizes = [128, 256, 512, 1024]\n",
+    "chunk_sizes = [64, 128, 256, 512]\n",
     "\n",
     "# Iterate over each chunk size and perform token splitting\n",
     "for size in chunk_sizes:\n",
@@ -305,7 +351,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 📜`SentenceSplitter`\n",
+    "# [📜`SentenceSplitter`](https://github.com/run-llama/llama_index/blob/main/llama-index-core/llama_index/core/node_parser/text/sentence.py)\n",
     "\n",
     "The `SentenceSplitter` class, as its name suggests, specializes in splitting text while trying to keep complete sentences and paragraphs together. This is in contrast to the `TokenTextSplitter`, which focuses on token limits.\n",
     "\n",
@@ -424,7 +470,7 @@
     "\n",
     "`SentenceSplitter`, on the other hand, splits the text into chunks based on sentences. It uses a sentence boundary detection algorithm to identify where sentences begin and end, and then groups these sentences into chunks. The size of these chunks can vary depending on the length of the sentences.\n",
     "\n",
-    "# Select Strategy for Evaluation"
+    "# Select Strategy for Ingestion"
    ]
   },
   {
@@ -457,7 +503,7 @@
     "from llama_index.core.settings import Settings\n",
     "from utils import setup_llm, setup_embed_model, setup_vector_store\n",
     "\n",
-    "COLLECTION_NAME = \"words-of-the-senpai-sentence_split_chunk_size_512\"\n",
+    "COLLECTION_NAME = \"wots_sentence_split_chunk_size_256\"\n",
     "\n",
     "setup_llm(\n",
     "    provider=\"openai\",\n",
@@ -469,7 +515,11 @@
     "    \"\"\"\n",
     "    )\n",
     "\n",
-    "setup_embed_model(provider=\"openai\", api_key=OPENAI_API_KEY)\n",
+    "setup_embed_model(\n",
+    "    provider=\"openai\", \n",
+    "    model=\"text-embedding-3-small\",\n",
+    "    api_key=OPENAI_API_KEY\n",
+    "    )\n",
     "\n",
     "vector_store = setup_vector_store(QDRANT_URL, QDRANT_API_KEY, COLLECTION_NAME)"
    ]
@@ -482,10 +532,13 @@
    "source": [
     "from utils import ingest\n",
     "\n",
-    "transforms = [Settings.embed_model]\n",
+    "# what splitter are we gonna use?\n",
+    "sent_splitter = SentenceSplitter(chunk_size=256, chunk_overlap=16)\n",
+    "\n",
+    "transforms = [sent_splitter, Settings.embed_model]\n",
     "\n",
     "split_nodes = ingest(\n",
-    "    documents=sentence_splitter_results['sentence_split_chunk_size_512'],\n",
+    "    documents=senpai_documents,\n",
     "    transformations=transforms,\n",
     "    vector_store=vector_store\n",
     ")"
@@ -507,9 +560,11 @@
     "from llama_index.core import StorageContext\n",
     "from utils import create_index\n",
     "\n",
-    "storage_context = StorageContext.from_defaults(vector_store=vector_store)\n",
-    "\n",
-    "index = create_index(from_where=\"vector_store\", vector_store=vector_store, storage_context=storage_context)"
+    "index = create_index(\n",
+    "    from_where=\"vector_store\", \n",
+    "    embed_model=Settings.embed_model,\n",
+    "    vector_store=vector_store,\n",
+    "    )"
    ]
   },
   {
@@ -520,11 +575,11 @@
     "\n",
     "The default response mode for the query engine is `refine` which will create and refine an answer by sequentially going through each retrieved text chunk. This makes a separate LLM call per Node/retrieved chunk.\n",
     "\n",
-    "We're using the Cohere API, on the free tier, and thus only can make 5 calls per minute to the API.\n",
+    "I am changing the response mode to `compact`, which is similar to refine but it concatenate the chunks beforehand, resulting in less LLM calls. \n",
     "\n",
-    "For that reason alone, and nothing else, I am changing the response mode to `compact`, which is similar to refine but it concatenate the chunks beforehand, resulting in less LLM calls. \n",
+    "You can [visit the LlamaIndex docs](https://docs.llamaindex.ai/en/stable/module_guides/querying/response_synthesizers/) to learn more about the choices you have here. Just note that this is also a hyperparameter that you have control over, which will also impact your generation. \n",
     "\n",
-    "You can revisit notebook `02_06_Querying.ipynb` for a refresher on the various response modes, or [visit the LlamaIndex docs](https://docs.llamaindex.ai/en/stable/module_guides/querying/response_synthesizers/). Just note that this is also a hyperparameter that you have control over, which will also impact your generation. I will leave this up to you to hack around with.\n",
+    "I will leave this up to you to hack around with.\n",
     "\n",
     "I'm also going to change the value of `similiarty_top_k` from it's default value of 2 to 5. This is an arbitrary choice and simple meant to illustrate that it's a hyperparameter under your control which will affect your generation results.  Increasing this value means you will increase your probability of fetching the most relevant documents from the vector database. \n",
     "\n",
@@ -605,6 +660,7 @@
    "outputs": [],
    "source": [
     "from prompts import ANSWER_GEN_PROMPT\n",
+    "\n",
     "print(ANSWER_GEN_PROMPT)"
    ]
   },
@@ -645,18 +701,22 @@
    "source": [
     "from utils import create_query_pipeline\n",
     "\n",
-    "chain = [Settings.llm,  query_engine]\n",
+    "from llama_index.core.query_pipeline import InputComponent\n",
+    "\n",
+    "input_component = InputComponent()\n",
+    "\n",
+    "chain = [input_component, query_engine]\n",
     "\n",
     "query_pipeline = create_query_pipeline(chain)"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### Run the generations on the evaluation set\n",
-    "\n",
-    "‼️ Note: This will take ~75 minutes. You don't have to run this yourself if you don't want to. Just download the dataset from my Hugging Face repo, linked below."
+    "Settings.llm"
    ]
   },
   {
@@ -665,19 +725,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils import run_generations_on_eval_set\n",
-    "\n",
-    "eval_dataset = run_generations_on_eval_set(\n",
-    "    eval_dataset=eval_dataset, \n",
-    "    col_name=\"sentence_split_chunk_size_512_answer\",\n",
-    "    query_pipeline=query_pipeline)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### How to load dataset from Hugging Face repo"
+    "query_pipeline.run(input=\"How can I become the best in the world at what I do?\")"
    ]
   },
   {
@@ -686,9 +734,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from datasets import load_dataset\n",
-    "eval_dataset = load_dataset(\"harpreetsahota/eval_sentence_split_chunk_size_512_answer\")"
+    "query_pipeline.run(input=\"How can I build my brand and make a name for myself in order to be uniquely qualified for emerging opportunities in technology?\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query_pipeline.run(input=\"How can I set up systems to be the most successful version of myself while working the least hard possible?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -707,7 +777,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
