--- a/05_Advanced_RAG_Pre_Retrieval/05_03_Small_to_Big_Retrieval.ipynb
+++ b/05_Advanced_RAG_Pre_Retrieval/05_03_Small_to_Big_Retrieval.ipynb
@@ -27,7 +27,7 @@
     "\n",
     "nest_asyncio.apply()\n",
     "\n",
-    "load_dotenv(\"../.env\")\n",
+    "load_dotenv(\"\")\n",
     "\n",
     "sys.path.append('../helpers')\n",
     "\n",
@@ -80,7 +80,10 @@
     "    \"\"\"\n",
     "    )\n",
     "\n",
-    "setup_embed_model(provider=\"openai\", api_key=OPENAI_API_KEY)"
+    "setup_embed_model(\n",
+    "    provider=\"openai\", \n",
+    "    model=\"text-embedding-3-small\",\n",
+    "    api_key=OPENAI_API_KEY)"
    ]
   },
   {
@@ -92,21 +95,6 @@
     "from utils import get_documents_from_docstore\n",
     "\n",
     "senpai_documents = get_documents_from_docstore(\"../data/words-of-the-senpais\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from datasets import load_dataset\n",
-    "\n",
-    "eval_dataset = load_dataset(\"harpreetsahota/LI_Learning_RAG_Eval_Set\", split='train')\n",
-    "\n",
-    "eval_dataset = eval_dataset.filter(lambda x: x['question_groundedness_score'] is not None and x['question_groundedness_score'] >= 4)\n",
-    "\n",
-    "smol_eval_set = eval_dataset.shuffle(seed=42).select(range(10))"
    ]
   },
   {
@@ -137,7 +125,7 @@
     "  3) 📝 **Response Synthesizer:** Use the retrieved text chunks along with the user query to generate a response\n",
     "\n",
     "\n",
-    "## 🪟`SentenceWindowNodeParser`\n",
+    "## [🪟`SentenceWindowNodeParser`](https://github.com/run-llama/llama_index/blob/main/llama-index-core/llama_index/core/node_parser/text/sentence_window.py)\n",
     "\n",
     "The `SentenceWindowNodeParser` is unique in that it focuses on individual sentences while also capturing the surrounding context.  This is particularly useful for tasks where understanding the broader context of a sentence is useful.\n",
     "\n",
@@ -197,7 +185,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "senpai_documents[42]"
+    "senpai_documents[42].__dict__"
    ]
   },
   {
@@ -208,7 +196,7 @@
    "source": [
     "from llama_index.core.node_parser import SentenceWindowNodeParser\n",
     "\n",
-    "SentenceWindowNodeParser(window_size=2).build_window_nodes_from_documents([senpai_documents[42]])"
+    "example_parsed = SentenceWindowNodeParser(window_size=2).build_window_nodes_from_documents([senpai_documents[42]])"
    ]
   },
   {
@@ -217,7 +205,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SentenceWindowNodeParser(window_size=3).get_nodes_from_documents([senpai_documents[42]])"
+    "example_parsed[3].__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "example_parsed_2 = SentenceWindowNodeParser(window_size=3).get_nodes_from_documents([senpai_documents[42]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "example_parsed_2[3].__dict__"
    ]
   },
   {
@@ -232,7 +238,7 @@
     "\n",
     "  - **Contextual Window**: Each node includes a \"window\" of sentences surrounding the core sentence for added context.\n",
     "\n",
-    "- 🔄 **`MetadataReplacementPostProcessor`**\n",
+    "- 🔄 **[`MetadataReplacementPostProcessor`](https://github.com/run-llama/llama_index/blob/main/llama-index-core/llama_index/core/postprocessor/metadata_replacement.py)**\n",
     "\n",
     "  - **Context Enhancement**: Replaces the sentence in each node with its surrounding window of sentences during retrieval.\n",
     "\n",
@@ -294,7 +300,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nodes[0].__dict__"
+    "nodes[5].__dict__"
    ]
   },
   {
@@ -303,7 +309,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(nodes[0].get_content(metadata_mode=\"all\"))"
+    "print(nodes[5].get_content(metadata_mode=\"all\"))"
    ]
   },
   {
@@ -312,16 +318,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(nodes[0].get_content(metadata_mode=\"llm\"))"
+    "print(nodes[5].get_content(metadata_mode=\"llm\"))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 👷🏽‍♂️ 🗂️ Build the Index and Ingest to Qdrant\n",
-    "\n",
-    "We build both the sentence index, as well as the \"base\" index."
+    "## 👷🏽‍♂️ 🗂️ Ingest to Qdrant And Build the Index"
    ]
   },
   {
@@ -336,13 +340,9 @@
     "from utils import create_index, create_query_engine\n",
     "from utils import setup_vector_store\n",
     "\n",
-    "COLLECTION_NAME = \"words-of-the-senpai-small-to-big-sentence-window\"\n",
+    "COLLECTION_NAME = \"wots-small-to-big-sentence-window\"\n",
     "\n",
-    "sentence_window_vector_store = setup_vector_store(QDRANT_URL, QDRANT_API_KEY, COLLECTION_NAME)\n",
-    "\n",
-    "sentence_window_storage_context = StorageContext.from_defaults(vector_store=vector_store)\n",
-    "\n",
-    "sentence_window_index = create_index(from_where=\"vector_store\",vector_store=vector_store, storage_context=storage_context)"
+    "sentence_window_vector_store = setup_vector_store(QDRANT_URL, QDRANT_API_KEY, COLLECTION_NAME)\n"
    ]
   },
   {
@@ -358,7 +358,7 @@
     "split_nodes = ingest(\n",
     "    documents=nodes,\n",
     "    transformations=transforms,\n",
-    "    vector_store=vector_store\n",
+    "    vector_store=sentence_window_vector_store\n",
     ")"
    ]
   },
@@ -385,8 +385,14 @@
     "\n",
     "node_postprocessors = [MetadataReplacementPostProcessor(target_metadata_key=\"window\")]\n",
     "\n",
+    "sentence_window_index = create_index(\n",
+    "    from_where=\"vector_store\",\n",
+    "    vector_store=sentence_window_vector_store,\n",
+    "    embed_model=Settings.embed_model,\n",
+    "    )\n",
+    "\n",
     "sentence_window_query_engine = create_query_engine(\n",
-    "    index=index, \n",
+    "    index=sentence_window_index, \n",
     "    mode=\"query\",\n",
     "    response_mode=\"compact\",\n",
     "    similiarty_top_k=5,\n",
@@ -413,16 +419,22 @@
    "source": [
     "from utils import create_query_pipeline\n",
     "\n",
-    "sentence_window_chain = [Settings.llm,  sentence_window_query_engine]\n",
+    "from llama_index.core.query_pipeline import InputComponent\n",
+    "\n",
+    "input_component = InputComponent()\n",
+    "\n",
+    "sentence_window_chain = [input_component, sentence_window_query_engine]\n",
     "\n",
     "sentence_window_query_pipeline = create_query_pipeline(sentence_window_chain)"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### 🪟🤖 Generate on Eval Set Using the Sentence Window Chunks"
+    "sentence_window_query_pipeline.run(input=\"How can I effectively build strength across multiple facets of real life without relying on complicated machines?\")"
    ]
   },
   {
@@ -431,25 +443,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils import run_generations_on_eval_set\n",
-    "\n",
-    "smol_eval_set = run_generations_on_eval_set(\n",
-    "    eval_dataset=smol_eval_set, \n",
-    "    col_name=\"small-to-big-sentence-window-answer\", \n",
-    "    query_pipeline=sentence_window_query_pipeline)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for row in smol_eval_set:\n",
-    "    print(\"💬\\n\")\n",
-    "    print(f\"\"\"🙋🏽‍♂️ Question: {row[\"question\"]}\"\"\")\n",
-    "    print(f\"\"\"\"🪟🤖 Reponse: {row[\"small-to-big-sentence-window-answer\"]}\"\"\")\n",
-    "    print(\"\\n\")"
+    "sentence_window_query_pipeline.run(input=\"How can I set rules and speak honestly without worrying about hurting someone's feelings?\")"
    ]
   },
   {
@@ -458,7 +452,7 @@
    "source": [
     "# 👨‍👦 Smaller Child Chunks Referring to Bigger Parent Chunk\n",
     "\n",
-    "<img src=\"https://miro.medium.com/v2/resize:fit:2000/0*x4rMd50GP99OSDuo.png\">\n",
+    "<img src=\"https://miro.medium.com/v2/resize:fit:2000/0*x4rMd50GP99OSDuo.png\"  width=\"70%\">\n",
     "\n",
     "Source: [Ivan Ilin](https://pub.towardsai.net/advanced-rag-techniques-an-illustrated-overview-04d193d8fec6)\n",
     "\n",
@@ -539,14 +533,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_nodes[0].__dict__"
+    "all_nodes[5].__dict__"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 👷🏽‍♂️ 🗂️ Build the Index and Ingest to Qdrant"
+    "### 👷🏽‍♂️ 🗂️  Ingest to Qdrant and Build the Index "
    ]
   },
   {
@@ -561,17 +555,18 @@
     "\n",
     "parent_child_vector_store = setup_vector_store(QDRANT_URL, QDRANT_API_KEY, COLLECTION_NAME)\n",
     "\n",
-    "parent_child_storage_context = StorageContext.from_defaults(vector_store=parent_child_vector_store)\n",
-    "\n",
-    "parent_child_index = create_index(vector_store=parent_child_vector_store, storage_context=parent_child_storage_context)\n",
-    "\n",
     "transforms = [Settings.embed_model]\n",
     "\n",
     "parent_child_nodes = ingest(\n",
     "    documents=all_nodes,\n",
     "    transformations=transforms,\n",
     "    vector_store=parent_child_vector_store\n",
-    ")"
+    ")\n",
+    "\n",
+    "parent_child_index = create_index(\n",
+    "    from_where=\"vector_store\", \n",
+    "    embed_model=Settings.embed_model,\n",
+    "    vector_store=parent_child_vector_store)"
    ]
   },
   {
@@ -739,16 +734,22 @@
    "source": [
     "from utils import create_query_pipeline\n",
     "\n",
-    "parent_child_chain = [Settings.llm,  parent_child_query_engine]\n",
+    "from llama_index.core.query_pipeline import InputComponent\n",
+    "\n",
+    "input_component = InputComponent()\n",
+    "\n",
+    "parent_child_chain = [input_component, parent_child_query_engine]\n",
     "\n",
     "parent_child_query_pipeline = create_query_pipeline(parent_child_chain)"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### 👨‍👦🤖 Generate on Eval Set Using the Parent Child Chunks"
+    "parent_child_query_pipeline.run(input=\"How can I effectively build strength across multiple facets of real life without relying on complicated machines?\")"
    ]
   },
   {
@@ -757,10 +758,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "smol_eval_set = run_generations_on_eval_set(\n",
-    "    eval_dataset=smol_eval_set, \n",
-    "    col_name=\"small-to-big-parent-child-answer\", \n",
-    "    query_pipeline=parent_child_query_pipeline)"
+    "parent_child_query_pipeline.run(input=\"How can I set rules and speak honestly without worrying about hurting someone's feelings?\")"
    ]
   },
   {
@@ -768,14 +766,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "for row in smol_eval_set:\n",
-    "    print(\"💬\\n\")\n",
-    "    print(f\"\"\"🙋🏽‍♂️ Question: {row[\"question\"]}\"\"\")\n",
-    "    print(f\"\"\"\"🪟🤖 Reponse: {row[\"small-to-big-sentence-window-answer\"]}\"\"\")\n",
-    "    print(f\"\"\"\"👨‍👦 🤖 Reponse: {row[\"small-to-big-parent-child-answer\"]}\"\"\")\n",
-    "    print(\"\\n\")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -794,7 +785,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
