--- a/05_Advanced_RAG_Pre_Retrieval/05_04_Semantic_Chunking.ipynb
+++ b/05_Advanced_RAG_Pre_Retrieval/05_04_Semantic_Chunking.ipynb
@@ -27,7 +27,7 @@
     "\n",
     "nest_asyncio.apply()\n",
     "\n",
-    "load_dotenv(\"../.env\")\n",
+    "load_dotenv()\n",
     "\n",
     "sys.path.append('../helpers')\n",
     "\n",
@@ -80,7 +80,11 @@
     "    \"\"\"\n",
     "    )\n",
     "\n",
-    "setup_embed_model(provider=\"openai\", api_key=OPENAI_API_KEY)"
+    "setup_embed_model(\n",
+    "    provider=\"openai\",\n",
+    "    model=\"text-embedding-3-small\",\n",
+    "    api_key=OPENAI_API_KEY\n",
+    "    )"
    ]
   },
   {
@@ -90,21 +94,12 @@
    "outputs": [],
    "source": [
     "from utils import get_documents_from_docstore\n",
+    "import random\n",
     "\n",
-    "senpai_documents = get_documents_from_docstore(\"../data/words-of-the-senpais\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from datasets import load_dataset\n",
+    "all_documents = get_documents_from_docstore(\"../data/words-of-the-senpais\")\n",
     "\n",
-    "eval_dataset = load_dataset(\"harpreetsahota/LI_Learning_RAG_Eval_Set\", split='train')\n",
-    "\n",
-    "eval_dataset = eval_dataset.filter(lambda x: x['question_groundedness_score'] is not None and x['question_groundedness_score'] >= 5)"
+    "random.seed(42)\n",
+    "senpai_documents = random.sample(all_documents, 100)"
    ]
   },
   {
@@ -258,9 +253,7 @@
     "\n",
     "- What sentence splitter do you want to use?\n",
     "\n",
-    "I'll use some arbitrary settings for illustrative purposes.\n",
-    "\n",
-    "Note: This process **will** take a long time, at least half an hour."
+    "I'll use some arbitrary settings for illustrative purposes.\n"
    ]
   },
   {
@@ -271,8 +264,8 @@
    "source": [
     "semantic_nodes = semantic_splitter(\n",
     "    embed_model = Settings.embed_model,\n",
-    "    buffer_size = 4, \n",
-    "    breakpoint_percentile_threshold = 0.84, \n",
+    "    buffer_size = 3, \n",
+    "    breakpoint_percentile_threshold = 0.55, \n",
     "    documents = senpai_documents\n",
     "    )"
    ]
@@ -292,7 +285,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "semantic_nodes[1000].__dict__"
+    "semantic_nodes[101].__dict__"
    ]
   },
   {
@@ -301,7 +294,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "semantic_nodes[1000].get_content()"
+    "print(semantic_nodes[100].get_content(metadata_mode=\"all\"))"
    ]
   },
   {
@@ -326,11 +319,7 @@
     "\n",
     "COLLECTION_NAME = \"words-of-the-senpai-semantic-nodes\"\n",
     "\n",
-    "semantic_nodes_vector_store = setup_vector_store(QDRANT_URL, QDRANT_API_KEY, COLLECTION_NAME)\n",
-    "\n",
-    "semantic_nodes_storage_context = StorageContext.from_defaults(vector_store=semantic_nodes_vector_store)\n",
-    "\n",
-    "semantic_nodes_index = create_index(from_where=\"vector_store\", vector_store=semantic_nodes_vector_store, storage_context=semantic_nodes_storage_context)"
+    "semantic_nodes_vector_store = setup_vector_store(\":memory:\", QDRANT_API_KEY, COLLECTION_NAME)"
    ]
   },
   {
@@ -345,7 +334,13 @@
     "    documents=semantic_nodes,\n",
     "    transformations=transforms,\n",
     "    vector_store=semantic_nodes_vector_store\n",
-    ")"
+    ")\n",
+    "\n",
+    "semantic_nodes_index = create_index(\n",
+    "    from_where=\"vector_store\", \n",
+    "    embed_model=Settings.embed_model,\n",
+    "    vector_store=semantic_nodes_vector_store\n",
+    "    )"
    ]
   },
   {
@@ -395,16 +390,22 @@
    "source": [
     "from utils import create_query_pipeline\n",
     "\n",
-    "semantic_nodes_chain = [Settings.llm,  semantic_nodes_query_engine]\n",
+    "from llama_index.core.query_pipeline import InputComponent\n",
+    "\n",
+    "input_component = InputComponent()\n",
+    "\n",
+    "semantic_nodes_chain = [input_component,  semantic_nodes_query_engine]\n",
     "\n",
     "semantic_nodes_query_pipeline = create_query_pipeline(semantic_nodes_chain)"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### 🧠🤖 Generate on Eval Set Using the Semantic Chunks"
+    "semantic_nodes_query_pipeline.run(input=\"How can I navigate the maze of the market while building a company?\")"
    ]
   },
   {
@@ -412,37 +413,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from utils import run_generations_on_eval_set\n",
-    "\n",
-    "eval_dataset = run_generations_on_eval_set(\n",
-    "    eval_dataset=eval_dataset, \n",
-    "    col_name=\"semantic-nodes-answer\", \n",
-    "    query_pipeline=semantic_nodes_query_pipeline,\n",
-    "    time_out=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "eval_dataset.push_to_hub(\"harpreetsahota/harpreetsahota/eval_dataset_semantic_chunks\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for row in eval_dataset.select(range(10)):\n",
-    "    print(\"💬\\n\")\n",
-    "    print(f\"\"\"🙋🏽‍♂️ Question: {row[\"question\"]}\"\"\")\n",
-    "    print(f\"\"\"\"🧠🤖 Reponse: {row[\"semantic-nodes-answer\"]}\"\"\")\n",
-    "    print(\"\\n\")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -461,7 +432,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
