--- a/05_Advanced_RAG_Pre_Retrieval/05_05_Metadata_Extraction.ipynb
+++ b/05_Advanced_RAG_Pre_Retrieval/05_05_Metadata_Extraction.ipynb
@@ -27,7 +27,7 @@
     "\n",
     "nest_asyncio.apply()\n",
     "\n",
-    "load_dotenv(\"../.env\")\n",
+    "load_dotenv(\"\")\n",
     "\n",
     "sys.path.append('../helpers')\n",
     "\n",
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "QDRANT_URL = os.environ['QDRANT_URL'] or getpass(\"Enter your Qdrant URL:\")"
+    "QDRANT_URL = \":memory:\""
    ]
   },
   {
@@ -80,7 +80,11 @@
     "    \"\"\"\n",
     "    )\n",
     "\n",
-    "setup_embed_model(provider=\"openai\", api_key=OPENAI_API_KEY)"
+    "setup_embed_model(\n",
+    "    provider=\"openai\",\n",
+    "    model=\"text-embedding-3-small\",\n",
+    "    api_key=OPENAI_API_KEY\n",
+    "    )"
    ]
   },
   {
@@ -89,24 +93,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils import get_documents_from_docstore\n",
+    "import random\n",
+    "from utils import get_documents_from_docstore, group_documents_by_author, sample_documents\n",
     "\n",
-    "senpai_documents = get_documents_from_docstore(\"../data/words-of-the-senpais\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from datasets import load_dataset\n",
+    "documents = get_documents_from_docstore(\"../data/words-of-the-senpais\")\n",
     "\n",
-    "eval_dataset = load_dataset(\"harpreetsahota/LI_Learning_RAG_Eval_Set\", split='train')\n",
+    "random.seed(42)\n",
     "\n",
-    "eval_dataset = eval_dataset.filter(lambda x: x['question_groundedness_score'] is not None and x['question_groundedness_score'] >= 4)\n",
+    "documents_by_author = group_documents_by_author(documents)\n",
     "\n",
-    "smol_eval_set = eval_dataset.shuffle(seed=1217).select(range(10))"
+    "senpai_documents = sample_documents(documents_by_author, num_samples=25)"
    ]
   },
   {
@@ -115,11 +111,9 @@
    "source": [
     "# 🗃️ Metadata for Nodes\n",
     "\n",
-    "Metadata provides additional context or information about the nodes, which can help in more precise and relevant retrieval of information.\n",
+    "Metadata provides additional context or information about the nodes.\n",
     "\n",
-    "During retrieval we can leverage additional context and information, enabling more precise and relevant retrieval of information. However, the effectiveness of this approach depends on the quality and relevance of the metadata tags used.\n",
-    "\n",
-    "The most simplest way to add metadata is to do so manually. \n",
+    "During retrieval we can leverage this additional context and information, for more precise and relevant retrieval. However, the effectiveness of this approach depends on the quality and relevance of the metadata tags used. The most simplest way to add metadata is to do so manually. \n",
     "\n",
     "Let's add some metadata for what each of our Senpai's are known for."
    ]
@@ -306,7 +300,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 👷🏽‍♂️ 🗂️ Build the Index and Ingest to Qdrant\n",
+    "### 👷🏽‍♂️ 🗂️ Ingest to Qdrant and Build the Index \n",
     "\n",
     "In the last few videos we did the node splitting first and then ingested to Qdrant. That was to make the pattern clear to you and give you a sense of how splitting works.\n",
     "\n",
@@ -321,7 +315,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  6%|▋         | 23/361 [00:21<04:09,  1.35it/s]"
+     ]
+    }
+   ],
    "source": [
     "from llama_index.core import StorageContext\n",
     "from llama_index.core.settings import Settings\n",
@@ -332,17 +334,18 @@
     "\n",
     "qa_summaries_vector_store = setup_vector_store(QDRANT_URL, QDRANT_API_KEY, COLLECTION_NAME)\n",
     "\n",
-    "qa_summaries_storage_context = StorageContext.from_defaults(vector_store=qa_summaries_vector_store)\n",
-    "\n",
-    "qa_summaries_index = create_index(vector_store=qa_summaries_vector_store, storage_context=qa_summaries_storage_context)\n",
-    "\n",
-    "transforms = [Settings.embed_model, text_splitter, qa_extractor, summary_extractor]\n",
+    "transforms = [text_splitter, qa_extractor, summary_extractor, Settings.embed_model]\n",
     "\n",
     "qa_summaries = ingest(\n",
     "    documents=senpai_documents,\n",
     "    transformations=transforms,\n",
     "    vector_store=qa_summaries_vector_store\n",
-    ")"
+    ")\n",
+    "qa_summaries_index = create_index(\n",
+    "    from_where=\"vector_store\",\n",
+    "    vector_store=qa_summaries_vector_store,\n",
+    "    embed_model=Settings.embed_model,\n",
+    "    )"
    ]
   },
   {
@@ -411,43 +414,22 @@
    "source": [
     "from utils import create_query_pipeline\n",
     "\n",
-    "qa_summaries_chain = [Settings.llm,  qa_summaries_query_engine]\n",
+    "from llama_index.core.query_pipeline import InputComponent\n",
+    "\n",
+    "input_component = InputComponent()\n",
+    "\n",
+    "qa_summaries_chain = [input_component, qa_summaries_query_engine]\n",
     "\n",
     "qa_summaries_query_pipeline = create_query_pipeline(qa_summaries_chain)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Run Generations"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils import run_generations_on_eval_set\n",
-    "\n",
-    "smol_eval_set = run_generations_on_eval_set(\n",
-    "    eval_dataset=eval_dataset, \n",
-    "    col_name=\"qa-summaries-answer\", \n",
-    "    query_pipeline=qa_summaries_query_pipeline)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for row in smol_eval_set:\n",
-    "    print(\"💬\\n\")\n",
-    "    print(f\"\"\"🙋🏽‍♂️ Question: {row[\"question\"]}\"\"\")\n",
-    "    print(f\"\"\"\"🧠🤖 Reponse: {row[\"qa-summaries-answer\"]}\"\"\")\n",
-    "    print(\"\\n\")"
+    "qa_summaries_query_pipeline.run(input=\"How can I ensure unswerving decision-making in my life?\")"
    ]
   },
   {
@@ -474,7 +456,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
