--- a/05_Advanced_RAG_Pre_Retrieval/05_06_Document_Summary_Index.ipynb
+++ b/05_Advanced_RAG_Pre_Retrieval/05_06_Document_Summary_Index.ipynb
@@ -27,7 +27,7 @@
     "\n",
     "nest_asyncio.apply()\n",
     "\n",
-    "load_dotenv(\"../.env\")\n",
+    "load_dotenv(\"\")\n",
     "\n",
     "sys.path.append('../helpers')\n",
     "\n",
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "QDRANT_URL = os.environ['QDRANT_URL'] or getpass(\"Enter your Qdrant URL:\")"
+    "QDRANT_URL = \":memory:\""
    ]
   },
   {
@@ -73,14 +73,17 @@
     "setup_llm(\n",
     "    provider=\"openai\",\n",
     "    api_key=OPENAI_API_KEY, \n",
-    "    model=\"gpt-4o\", \n",
+    "    model=\"gpt-4\", \n",
     "    temperature=0.75, \n",
     "    system_prompt=\"\"\"Use ONLY the provided context and generate a complete, coherent answer to the user's query. \n",
     "    Your response must be grounded in the provided context and relevant to the essence of the user's query.\n",
     "    \"\"\"\n",
     "    )\n",
     "\n",
-    "setup_embed_model(provider=\"openai\", api_key=OPENAI_API_KEY)"
+    "setup_embed_model(\n",
+    "    provider=\"openai\", \n",
+    "    model=\"text-embedding-3-small\",\n",
+    "    api_key=OPENAI_API_KEY)"
    ]
   },
   {
@@ -89,24 +92,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils import get_documents_from_docstore\n",
+    "import random\n",
+    "from utils import get_documents_from_docstore, group_documents_by_author, sample_documents\n",
     "\n",
-    "senpai_documents = get_documents_from_docstore(\"../data/words-of-the-senpais\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from datasets import load_dataset\n",
+    "documents = get_documents_from_docstore(\"../data/words-of-the-senpais\")\n",
     "\n",
-    "eval_dataset = load_dataset(\"harpreetsahota/LI_Learning_RAG_Eval_Set\", split='train')\n",
+    "random.seed(42)\n",
     "\n",
-    "eval_dataset = eval_dataset.filter(lambda x: x['question_groundedness_score'] is not None and x['question_groundedness_score'] >= 5)\n",
+    "documents_by_author = group_documents_by_author(documents)\n",
     "\n",
-    "smol_eval_set = eval_dataset.shuffle(seed=916).select(range(10))"
+    "senpai_documents = sample_documents(documents_by_author, num_samples=10)"
    ]
   },
   {
@@ -162,20 +157,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from llama_index.core import DocumentSummaryIndex, get_response_synthesizer\n",
-    "from llama_index.core.node_parser import SentenceSplitter"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Setup Vector Store and Storage Context"
+    "## Setup Vector Store"
    ]
   },
   {
@@ -191,16 +176,14 @@
     "\n",
     "COLLECTION_NAME = \"words-of-the-senpai-document-summary-index\"\n",
     "\n",
-    "doc_summary_vector_store = setup_vector_store(QDRANT_URL, QDRANT_API_KEY, COLLECTION_NAME)\n",
-    "\n",
-    "storage_context = StorageContext.from_defaults(vector_store=doc_summary_vector_store)"
+    "doc_summary_vector_store = setup_vector_store(QDRANT_URL, QDRANT_API_KEY, COLLECTION_NAME)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Ingest to Qdrant using `DocumentSummaryIndex`\n",
+    "## Ingest using [`DocumentSummaryIndex`](https://github.com/run-llama/llama_index/blob/main/llama-index-core/llama_index/core/indices/document_summary/base.py)\n",
     "\n",
     "The `DocumentSummaryIndex`:\n",
     "\n",
@@ -231,9 +214,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "splitter = SentenceSplitter(chunk_size=1024, chunk_overlap=16)\n",
+    "from llama_index.core import DocumentSummaryIndex, get_response_synthesizer\n",
+    "from llama_index.core.node_parser import TokenTextSplitter\n",
     "\n",
-    "summary_llm = OpenAI(model=\"gpt-4o\")\n",
+    "splitter = TokenTextSplitter(chunk_size=1024, chunk_overlap=16)\n",
     "\n",
     "response_synthesizer = get_response_synthesizer(\n",
     "    response_mode=\"tree_summarize\", use_async=True\n",
@@ -241,12 +225,12 @@
     "\n",
     "doc_summary_index = DocumentSummaryIndex.from_documents(\n",
     "    senpai_documents,\n",
-    "    llm=summary_llm,\n",
+    "    llm=Settings.llm,\n",
     "    embed_model=Settings.embed_model,\n",
     "    transformations=[splitter],\n",
     "    response_synthesizer=response_synthesizer,\n",
-    "    storage_context=storage_context,\n",
     "    show_progress=True,\n",
+    "    vector_store=doc_summary_vector_store\n",
     ")"
    ]
   },
@@ -254,11 +238,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 🔧 Setup Query Engine and Pipeline\n",
-    "\n",
-    "<img src=\"https://www.llamaindex.ai/_next/image?url=https%3A%2F%2Fcdn.sanity.io%2Fimages%2F7m9jw85w%2Fproduction%2F6d78d199badf9b45f5637d2a87aee0b12b9a335c-2099x1134.png%3Ffit%3Dmax%26auto%3Dformat&w=1920&q=75\" style=\"width:50%; height:50%\">\n",
-    "\n",
-    "Source: [LlamaIndex Blog](https://www.llamaindex.ai/blog/a-new-document-summary-index-for-llm-powered-qa-systems-9a32ece2f9ec)"
+    "### 🔧 Setup Query Engine and Pipeline\n"
    ]
   },
   {
@@ -297,6 +277,11 @@
    "metadata": {},
    "source": [
     "## 📜 [Document Summary Retrievers](https://github.com/run-llama/llama_index/blob/main/llama-index-core/llama_index/core/indices/document_summary/retrievers.py)\n",
+    "\n",
+    "\n",
+    "<img src=\"https://www.llamaindex.ai/_next/image?url=https%3A%2F%2Fcdn.sanity.io%2Fimages%2F7m9jw85w%2Fproduction%2F6d78d199badf9b45f5637d2a87aee0b12b9a335c-2099x1134.png%3Ffit%3Dmax%26auto%3Dformat&w=1920&q=75\" style=\"width:70%; height:70%\">\n",
+    "\n",
+    "Source: [LlamaIndex Blog](https://www.llamaindex.ai/blog/a-new-document-summary-index-for-llm-powered-qa-systems-9a32ece2f9ec)\n",
     "\n",
     "- 📂 Contains two types of retrievers:\n",
     "  1. 🧠 LLM-based retriever (`DocumentSummaryIndexLLMRetriever`)\n",
@@ -356,9 +341,10 @@
    "source": [
     "doc_llm_retriever = DocumentSummaryIndexLLMRetriever(\n",
     "    doc_summary_index,\n",
+    "    choice_top_k=5,\n",
+    "    llm=Settings.llm,\n",
     "    # choice_select_prompt=None,\n",
     "    # choice_batch_size=10,\n",
-    "    # choice_top_k=1,\n",
     "    # format_node_batch_fn=None,\n",
     "    # parse_choice_select_answer_fn=None,\n",
     ")\n",
@@ -377,9 +363,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "doc_llm_query_engine.query(\"How can I stop overanalyzing my own moods and feelings?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from utils import create_query_pipeline\n",
     "\n",
-    "doc_llm__chain = [Settings.llm,  doc_llm_query_engine]\n",
+    "from llama_index.core.query_pipeline import InputComponent\n",
+    "\n",
+    "input_component = InputComponent()\n",
+    "\n",
+    "doc_llm__chain = [input_component, doc_llm_query_engine]\n",
     "\n",
     "doc_llm_query_pipeline = create_query_pipeline(doc_llm__chain)"
    ]
@@ -390,20 +389,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils import run_generations_on_eval_set\n",
-    "\n",
-    "smol_eval_set = run_generations_on_eval_set(\n",
-    "    eval_dataset=eval_dataset, \n",
-    "    col_name=\"doc-llm-answer\", \n",
-    "    query_pipeline=doc_llm_query_pipeline\n",
-    "    time_out=False)"
+    "doc_llm_query_pipeline.run(input=\"How can I stop overanalyzing my own moods and feelings?\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 🎨 `DocumentSummaryIndexEmbeddingRetriever`\n",
+    "#### 🎨 [`DocumentSummaryIndexEmbeddingRetriever`](https://github.com/run-llama/llama_index/blob/aad4a6fb94c8fcaf1b7dfac56b88b9e277886bfe/llama-index-core/llama_index/core/indices/document_summary/retrievers.py#L121)\n",
     "\n",
     "- 📜 Retrieves relevant summaries from the index using embedding similarity\n",
     "\n",
@@ -436,7 +429,7 @@
     "doc_embed_query_engine = RetrieverQueryEngine(\n",
     "    retriever=doc_embed_retriever,\n",
     "    response_synthesizer=response_synthesizer,\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -445,7 +438,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "doc_embed__chain = [Settings.llm,  doc_embed_query_engine]\n",
+    "doc_embed__chain = [input_component, doc_embed_query_engine]\n",
     "\n",
     "doc_embed_query_pipeline = create_query_pipeline(doc_embed__chain)"
    ]
@@ -456,11 +449,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "smol_eval_set = run_generations_on_eval_set(\n",
-    "    eval_dataset=eval_dataset, \n",
-    "    col_name=\"doc-embed-answer\", \n",
-    "    query_pipeline=doc_embed_query_pipeline\n",
-    "    time_out=False)"
+    "doc_embed_query_pipeline.run(input=\"How can I stop overanalyzing my own moods and feelings?\")"
    ]
   },
   {
@@ -468,15 +457,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "for row in eval_dataset.select(range(10)):\n",
-    "    print(\"💬\\n\")\n",
-    "    print(f\"\"\"🙋🏽‍♂️ Question: {row[\"question\"]}\"\"\")\n",
-    "    print(f\"\"\"\"LLM Retriever Reponse: {row[\"doc-llm-answer\"]}\"\"\")\n",
-    "    print(\"\\n\")\n",
-    "    print(f\"\"\"\"Embedding Retriever Reponse: {row[\"doc-embed-answer\"]}\"\"\")\n",
-    "    print(\"\\n\")"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -495,7 +483,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
