--- a/05_Advanced_RAG_Pre_Retrieval/05_07_Query_Transformations.ipynb
+++ b/05_Advanced_RAG_Pre_Retrieval/05_07_Query_Transformations.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "%%capture\n",
-    "!pip install llama-index==0.10.37 llama-index-embeddings-openai==0.1.9 qdrant-client==1.9.1 llama-index-vector-stores-qdrant==0.2.8 llama-index-llms-openai==0.1.19"
+    "!pip install llama-index-retrievers-bm25 llama-index==0.10.37 llama-index-embeddings-openai==0.1.9 qdrant-client==1.9.1 llama-index-vector-stores-qdrant==0.2.8 llama-index-llms-openai==0.1.19"
    ]
   },
   {
@@ -27,7 +27,7 @@
     "\n",
     "nest_asyncio.apply()\n",
     "\n",
-    "load_dotenv(\"../.env\")\n",
+    "load_dotenv(\"\")\n",
     "\n",
     "sys.path.append('../helpers')\n",
     "\n",
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "QDRANT_URL = os.environ['QDRANT_URL'] or getpass(\"Enter your Qdrant URL:\")"
+    "QDRANT_URL = \":memory:\""
    ]
   },
   {
@@ -79,6 +79,7 @@
     "\n",
     "setup_embed_model(\n",
     "    provider=\"openai\", \n",
+    "    model=\"text-embedding-3-small\",\n",
     "    api_key=OPENAI_API_KEY\n",
     "    )"
    ]
@@ -89,24 +90,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from datasets import load_dataset\n",
+    "import random\n",
+    "from utils import get_documents_from_docstore, group_documents_by_author, sample_documents\n",
     "\n",
-    "eval_dataset = load_dataset(\"harpreetsahota/LI_Learning_RAG_Eval_Set\", split='train')\n",
+    "documents = get_documents_from_docstore(\"../data/words-of-the-senpais\")\n",
     "\n",
-    "eval_dataset = eval_dataset.filter(lambda x: x['question_groundedness_score'] is not None and x['question_groundedness_score'] >= 4)\n",
+    "random.seed(42)\n",
     "\n",
-    "smol_eval_set = eval_dataset.shuffle(seed=2022).select(range(10))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from utils import get_documents_from_docstore\n",
+    "documents_by_author = group_documents_by_author(documents)\n",
     "\n",
-    "senpai_documents = get_documents_from_docstore(\"../data/words-of-the-senpais\")"
+    "senpai_documents = sample_documents(documents_by_author, num_samples=5)"
    ]
   },
   {
@@ -123,107 +116,27 @@
    "outputs": [],
    "source": [
     "from llama_index.core import StorageContext\n",
-    "from llama_index.core.storage.docstore import SimpleDocumentStore\n",
-    "from llama_index.core.storage.index_store.simple_index_store import SimpleIndexStore\n",
     "from llama_index.core.settings import Settings\n",
-    "from utils import setup_vector_store\n",
     "\n",
-    "COLLECTION_NAME = \"words-of-the-senpai-rr-fusion\"\n",
-    "\n",
-    "rr_fusion_vector_store = setup_vector_store(QDRANT_URL, QDRANT_API_KEY, COLLECTION_NAME, enable_hybrid=True)\n",
-    "\n",
-    "rr_fusion_storage_context = StorageContext.from_defaults(\n",
-    "    docstore = SimpleDocumentStore.from_persist_dir(persist_dir=\"../data/words-of-the-senpais\"),\n",
-    "    index_store=SimpleIndexStore(),\n",
-    "    vector_store = rr_fusion_vector_store\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Ingest with a docstore"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from llama_index.core import VectorStoreIndex\n",
     "from llama_index.core.node_parser import SentenceSplitter\n",
-    "from llama_index.core.storage.docstore import SimpleDocumentStore\n",
+    "from utils import create_index, create_query_engine, ingest, setup_vector_store\n",
     "\n",
-    "from utils import ingest \n",
+    "COLLECTION_NAME = \"query-transforms\"\n",
+    "\n",
+    "vector_store = setup_vector_store(QDRANT_URL, QDRANT_API_KEY, COLLECTION_NAME)\n",
     "\n",
     "sentence_splitter = SentenceSplitter(chunk_size=256, chunk_overlap=16)\n",
     "\n",
-    "index = VectorStoreIndex.from_documents(\n",
-    "    documents=senpai_documents, \n",
+    "nodes = ingest(\n",
+    "    documents=senpai_documents,\n",
+    "    transformations=[sentence_splitter, Settings.embed_model],\n",
+    "    vector_store=vector_store\n",
+    ")\n",
+    "index = create_index(\n",
+    "    from_where=\"vector_store\",\n",
+    "    vector_store=vector_store,\n",
     "    embed_model=Settings.embed_model,\n",
-    "    storage_context=rr_fusion_storage_context,\n",
-    "    transformations=[sentence_splitter]\n",
     "    )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# A brief word on vector store query modes\n",
-    "\n",
-    "The vector_store_query_mode in LlamaIndex determines the type of search to be performed. Here's a brief description of each mode:\n",
-    "\n",
-    " - `default`: This mode performs a vector search. It retrieves the most similar vectors based on the query vector.  They create a numerical representation of a piece of text, represented as a long list of numbers. These dense vectors can capture rich semantics across the entire piece of text. `alpha=0.75` is used by default.\n",
-    "\n",
-    " - `hybrid`: This mode performs a hybrid search. It combines vector search with traditional search methods. `alpha` parameter determines weighting (`alpha = 0` -> bm25, `alpha = 1` -> vector search). \n",
-    "\n",
-    " - `semantic_hybrid`: Semantic hybrid search combines text search with vector embeddings. Text search provides keyword matching and lexical retrieval. Vector embeddings allow finding documents with similar meaning, even if they don't contain exact keyword matches. This mode incorporates semantic reranking to hybrid search results to improve search relevance.\n",
-    "\n",
-    " - `sparse`: Most of the elements in a sparse vector are zero, with only a few key values being non-zero. These sparse vectors are great at capturing specific keywords and similar small details. You need to use a specialized embedding model to create sparse vectors. \n",
-    "   - `FastEmbed` has a few choices for sparse text embedding models, for example you can pass in `prithvida/Splade_PP_en_v1` as the model name when you run `setup_embed_model` if you want to use them. \n",
-    "    - We didn't use a sparse vector here, so we won't see this in action.  \n",
-    "    - Note, if you try this you'll need to set the `sparse_top_k` argument, which represents how many nodes will be retrieved from each dense and sparse query. For example, if `sparse_top_k=5` is set, that means I will retrieve 5 nodes using sparse vectors and 5 nodes using dense vectors.\n",
-    "\n",
-    " - `text_search`: Text search looks for exact keyword matches between the query and documents.\n",
-    "\n",
-    " - `similarity_top_k`: controls the final number of returned nodes. A fusion algorithm is applied to rank and order the nodes from different vector spaces, `similarity_top_k=2` means the top two nodes after fusion are returned.\n",
-    "\n",
-    " - `hybrid_top_k`: return top k results from `hybrid` search. `similarity_top_k` is used for dense search top k"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "QUERY_STRING = \"How can I create my own luck?\"\n",
-    "\n",
-    "def test_retrievers(query=QUERY_STRING, index=index, **kwargs):\n",
-    "    retriever_engine = index.as_retriever(**kwargs)\n",
-    "    retrieved_docs = retriever_engine.retrieve(query)\n",
-    "    print(f\"Retrieved {len(retrieved_docs)} nodes.\")\n",
-    "    print(\"\\n\")\n",
-    "    for node in retrieved_docs:\n",
-    "        print(f\"Score: {node.score:.2f} - {node.text}...\\n-----\\n\")\n",
-    "    \n",
-    "mode_kwargs = {\n",
-    "    'default': {'vector_store_query_mode': 'default', 'similarity_top_k': 3},\n",
-    "    'bm25': {'vector_store_query_mode':'hybrid', 'alpha': 0.0, 'hybrid_top_k': 3}, \n",
-    "    'hybrid': {'vector_store_query_mode':'hybrid', 'alpha': 0.25, 'hybrid_top_k': 3},\n",
-    "    'semantic_hybrid': {'vector_store_query_mode':'semantic_hybrid', 'alpha': 0.75, 'hybrid_top_k': 3},\n",
-    "    # 'sparse': {\"sparse_top_k\":5},\n",
-    "    'text_search': {'vector_store_query_mode':'text_search', 'similarity_top_k': 3},\n",
-    "}\n",
-    "\n",
-    "for mode, kwargs in mode_kwargs.items():\n",
-    "    print(f\"Retrieving nodes using: {mode} retrieval\")\n",
-    "    test_retrievers(**kwargs)\n",
-    "    print(f\"Retrieval with {mode} complete...\")        \n",
-    "    print(\"\\n\")"
    ]
   },
   {
@@ -301,6 +214,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "QUERY_STRING = \"How can I create my own luck?\"\n",
+    "\n",
     "def generate_queries(query= QUERY_STRING, llm=Settings.llm, num_queries  = 4):\n",
     "    response = llm.predict(\n",
     "        QUERY_GEN_PROMPT_TEMPLATE, \n",
@@ -313,143 +228,6 @@
     "    return queries\n",
     "\n",
     "generate_queries()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Hybrid Fusion Retriever\n",
-    "\n",
-    "The Hybrid Fusion Retriever combines of semantic and keyword-based approaches.  This uses a [BM25-based retriever](https://en.wikipedia.org/wiki/Okapi_BM25) with a semantic index. BM25 is a ranking function used by search engines to estimate the relevance of documents to a given search query. \n",
-    "\n",
-    "#### How it works\n",
-    "\n",
-    "The system follows a three-step process:\n",
-    "\n",
-    "- **Query Generation/Rewriting**: It creates multiple queries from the original user query to better match the user's intent and improve the precision and recall of the retrieved results.\n",
-    "\n",
-    "- **Retrieval**: It performs the retrieval for each query over an ensemble of retrievers.\n",
-    "\n",
-    "- **Reranking/Fusion**: It combines the results from all queries and applies a reranking step to fuse the top relevant results.\n",
-    "\n",
-    "#### ℹ️ Useful knowledge to have as a RAG practitioner\n",
-    "\n",
-    "##### Index Fusion Mode\n",
-    "\n",
-    "We set the mode to `reciprocal_rerank`. The system merges its index with a BM25 based retriever. This allows it to understand both the semantic relationships (meaningful connections between words) and keywords in the input queries. Other modes are `relative_score`, `dist_based_score`, `simple` .\n",
-    "\n",
-    "  - [`reciprocal_rerank`](https://github.com/run-llama/llama_index/blob/f116d75557d6867ed2cc61811a1c2f0b0c4d4ddb/llama-index-core/llama_index/core/retrievers/fusion_retriever.py#L99): Reciprocal rank is a measure of how early a relevant item appears in a ranked list. Lower ranks correspond to higher relevance. This mode fuses the results from multiple sources by giving higher importance to nodes that appear earlier in the rankings across those sources.\n",
-    "\n",
-    "  - [`relative_score`](https://github.com/run-llama/llama_index/blob/f116d75557d6867ed2cc61811a1c2f0b0c4d4ddb/llama-index-core/llama_index/core/retrievers/fusion_retriever.py#L135): It scales each score to a range from 0 to 1 using min-max scaling. Then it multiplies each scaled score by a retriever-specific weight. After that, it divides each score by the total number of queries. Basically, it scales, weights, and combines scores from multiple retrieval sources.\n",
-    "\n",
-    "  - `dist_based_score`: Same as `relative_score`, but, instead of using the minimum and maximum scores directly, the function calculates them based on the mean and standard deviation of the scores. This reduces the impact of outliers on the scaling process.\n",
-    "\n",
-    "  - `simple`: re-orders results based on original scores\n",
-    "\n",
-    "\n",
-    "##### **Reciprocal Rerank Algorithm**\n",
-    "\n",
-    " Since both retrievers calculate a score for the relevance of results, the system uses the reciprocal rerank algorithm to reshuffle the results. This is done without employing additional models or excessive computation, making the process more efficient.\n",
-    " \n",
-    "  - 🧮 **Rank Calculation**: For each unique node, calculate its reciprocal rank from each list where it appears. The reciprocal rank of a node in a list is defined as 1 divided by its position in that list (e.g., a node at rank 3 has a reciprocal rank of 1/3).\n",
-    "\n",
-    "  - 📊 **Score Aggregation**: Sum up the reciprocal ranks for each node across all lists in which it appears. This aggregated score represents the overall relevance of the node, taking into account its performance across multiple retrieval scenarios.\n",
-    "\n",
-    "  - 🥇🥈🥉 **Reordering**: Finally, reorder all nodes based on their aggregated scores, from highest to lowest. This re-ranking step prioritizes nodes that consistently appear in higher ranks across multiple lists, thus likely to be more relevant to the query."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from llama_index.retrievers.bm25 import BM25Retriever\n",
-    "\n",
-    "from llama_index.core.retrievers import QueryFusionRetriever\n",
-    "\n",
-    "vector_retriever = index.as_retriever(similarity_top_k=5)\n",
-    "\n",
-    "bm25_retriever = BM25Retriever.from_defaults(docstore=index.docstore, similarity_top_k=5)\n",
-    "\n",
-    "from llama_index.core.query_engine import RetrieverQueryEngine\n",
-    "\n",
-    "retriever = QueryFusionRetriever(\n",
-    "    [vector_retriever, bm25_retriever],\n",
-    "    similarity_top_k=5,\n",
-    "    num_queries=3,  # set this to 1 to disable query generation\n",
-    "    mode=\"reciprocal_rerank\",\n",
-    "    use_async=True,\n",
-    "    verbose=True,\n",
-    "    query_gen_prompt=QUERY_GEN_PROMPT_TEMPLATE, \n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nodes_with_scores = retriever.retrieve(\n",
-    "    \"How can I stop wasting energy on projecting a facade and focus on expanding my potential as a human being?\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for node in nodes_with_scores:\n",
-    "    print(f\"Score: {node.score:.2f} - {node.text}...\\n-----\\n\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from llama_index.core.response_synthesizers import ResponseMode\n",
-    "\n",
-    "from utils import create_query_pipeline\n",
-    "from utils import run_generations_on_eval_set\n",
-    "\n",
-    "from prompts import HYPE_ANSWER_GEN_PROMPT\n",
-    "\n",
-    "HYPE_ANSWER_GEN_PROMPT_TEMPLATE = PromptTemplate(HYPE_ANSWER_GEN_PROMPT)\n",
-    "\n",
-    "rr_fusion_query_engine = RetrieverQueryEngine.from_args(\n",
-    "    retriever,\n",
-    "    response_mode = ResponseMode.COMPACT_ACCUMULATE,\n",
-    "    use_async = True,\n",
-    "    text_qa_template = HYPE_ANSWER_GEN_PROMPT_TEMPLATE\n",
-    "    )\n",
-    "\n",
-    "rr_fusion_chain = [Settings.llm,  rr_fusion_query_engine]\n",
-    "\n",
-    "rr_fusion_query_pipeline = create_query_pipeline(rr_fusion_chain)\n",
-    "\n",
-    "smol_eval_set = run_generations_on_eval_set(\n",
-    "    eval_dataset=smol_eval_set, \n",
-    "    col_name=\"rr-fusion-answer\", \n",
-    "    query_pipeline=rr_fusion_query_pipeline,\n",
-    "    time_out=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for row in smol_eval_set.select(range(10)):\n",
-    "    print(\"💬\\n\")\n",
-    "    print(f\"\"\"🙋🏽‍♂️ Question: {row[\"question\"]}\"\"\")\n",
-    "    print(f\"\"\"\"RR Fusion Reponse: {row[\"rr-fusion-answer\"]}\"\"\")"
    ]
   },
   {
@@ -481,6 +259,10 @@
    "source": [
     "from llama_index.core.tools import QueryEngineTool, ToolMetadata\n",
     "from llama_index.core.query_engine import SubQuestionQueryEngine\n",
+    "\n",
+    "from prompts import HYPE_ANSWER_GEN_PROMPT\n",
+    "\n",
+    "HYPE_ANSWER_GEN_PROMPT_TEMPLATE = PromptTemplate(HYPE_ANSWER_GEN_PROMPT)\n",
     "\n",
     "query_engine_tools = [\n",
     "    QueryEngineTool(\n",
@@ -624,16 +406,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hyde_chain = [Settings.llm,  hyde_query_engine]\n",
+    "from llama_index.core.query_pipeline import InputComponent\n",
+    "from utils import create_query_pipeline\n",
     "\n",
-    "hyde_query_pipeline = create_query_pipeline(hyde_chain)\n",
+    "input_component = InputComponent()\n",
     "\n",
-    "smol_eval_set = run_generations_on_eval_set(\n",
-    "    eval_dataset=smol_eval_set, \n",
-    "    col_name=\"hyde-answer\", \n",
-    "    query_pipeline=hyde_query_pipeline,\n",
-    "    time_out=False\n",
-    "    )"
+    "hyde_chain = [input_component,  hyde_query_engine]\n",
+    "\n",
+    "hyde_query_pipeline = create_query_pipeline(hyde_chain)"
    ]
   },
   {
@@ -642,11 +422,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for row in smol_eval_set.select(range(10)):\n",
-    "    print(\"💬\\n\")\n",
-    "    print(f\"\"\"🙋🏽‍♂️ Question: {row[\"question\"]}\"\"\")\n",
-    "    print(f\"\"\"\"RR Fusion Reponse: {row[\"rr-fusion-answer\"]}\"\"\")\n",
-    "    print(f\"\"\"\"HyDE Reponse: {row[\"hyde-answer\"]}\"\"\")"
+    "hyde_query_pipeline.run(input=\"What should I do if I feel like I am not being true to myself and relying too much on external securities?\")"
    ]
   }
  ],
@@ -666,7 +442,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
